--- a/.gitignore
+++ b/.gitignore
@@ -9,14 +9,11 @@
 **/.cache/**
 **/babel-loader
 
-#build
-**/build/**
-
 # testing
 /coverage
 
 # production
-/build
+**/build
 
 # misc
 .DS_Store
