--- a/YT_Midu/express/package.json
+++ b/YT_Midu/express/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "tfc",
+  "name": "express",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev src/index.ts",
-    "start": "node build/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "ts-node-dev": "^2.0.0"
+    "@types/express": "^4.17.18",
+    "ts-node-dev": "^2.0.0",
+    "ts-standard": "^12.0.2",
+    "typescript": "5.2.2"
+  },
+  "dependencies": {
+    "express": "4.18.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "project": "./express/tsconfig.json"
+    },
+    "extends":["./node_modules/ts-standard/eslintrc.json"]
   }
 }
